# AlphaTechAI

./: .gitignore  .replit  README.md  SETUP_INSTRUCTIONS.md  overview.md  pyproject.toml
backend/: main.py  requirements.txt  setup_google_sheets.py
backend/keys/: service-account.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
