[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "google-auth>=2.42.1",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.38.0",
]
